<resources>
    <string name="app_name">Razky</string>
    <string name="title_donate_now">Donate Now !</string>
    <string name="title_my_profile">My Profile</string>
    <string name="rumah_kasih_seksyen_7_shah_alam">Rumah Kasih, Seksyen 7 Shah Alam</string>
    <string name="updated_on_3_jun_2022_at_13_25_myt">Updated on 3 Jun 2022 at 13:25 (MYT)</string>
    <string name="stock_out_in">Stock out in</string>
    <string name="_1_day_s">1 day(s)</string>
    <string name="inventory_left">Inventory left</string>
    <string name="_87">87%</string>
    <string name="total_item_needed">Total items \nrequire</string>
    <string name="rm187_56">RM187.56</string>
    <string name="last_updated_on_3_jun_2022_at_13_27_myt">Last updated on 3 Jun 2022 at 13:27 (MYT)</string>
    <string name="minimum_stock">Minimum \nStock</string>
    <string name="current_stock">Current \nStock</string>
    <string name="stock_require">Stock \nRequire</string>
    <string name="price_rm">Price \n(RM)</string>
    <string name="nestle_milo_2kg">Nestle Milo (2kg)</string>
    <string name="_39_90">39.90</string>
    <string name="_2">2</string>
    <string name="donator_s_details">Donator\'s Details</string>
    <string name="donor_name">Name</string>
    <string name="donor_email">Email</string>
    <string name="donor_phone_number">Phone Number</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="recipient_s_name">Recipient\'s Name</string>
    <string name="tac">TAC</string>
    <string name="request_tac">Request TAC</string>
    <string name="nur_syahirah_binti_abdul_rahman">Nur Syahirah Binti Abdul Rahman</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="syahirah_gmail_com">syahirah@gmail.com</string>
    <string name="_60123456789">+60123456789</string>
    <string name="_123456789012">123456789012</string>
    <string name="_09765432112">09765432112</string>
    <string name="donation_completed">Donation Completed</string>
    <string name="reference_id">Reference ID</string>
    <string name="effective_date">Effective date</string>
    <string name="_5_jun_2022">5 Jun 2022</string>
    <string name="donor">Donor</string>
    <string name="donation_history">Donation History</string>
    <string name="donated_on_6_jun_2022_at_12_15_myt">Donated on 6 Jun 2022 at 12:15 (MYT)</string>
    <string name="donate_to_nearby_orphanage"><u>Donate to nearby orphanage</u></string>
    <string name="switch_role"><u>Switch role</u></string>
    <string name="inventory">Inventory</string>
    <string name="milo_2kg">Milo (2kg)</string>
    <string name="nik_harris_putra">Nik Harris Putra</string>
    <string name="caretaker">Caretaker</string>
    <string name="completed_donation_history">Completed Donation History</string>
    <string name="anonymous_donator">Anonymous Donator</string>
    <string name="_10_30">10/30</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="tick_if_you_want_to_stay_anonymous_when_donating">Tick if you want to stay anonymous when donating</string>
    <string name="click_here_to_link_your_bank_account_here">Click here to link your bank account here...</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_you_mail">Enter you mail</string>
    <string name="enter_your_ic_number">Enter your IC number</string>
    <string name="not_part_of_the_donor_yet_click_here">Not part of the donor yet? Click here...</string>
    <string name="not_part_of_the_caretaker_yet_click_here">Not part of the caretaker yet? Click here...</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="google_map_key">AIzaSyBqMjo5KODnGic77uTDa3--BphdnuRnKmM</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="save">Save</string>
    <string name="enter_orphanage_name">Enter orphanage name</string>
    <string name="location">Location</string>
    <string name="updates">Updates:</string>
    <string name="rumah_kasih_syahirah_required_your_help_peeps_do_donate_on_the_neccssary_item_from_the_apps_there_is_one_more_new_orphanage_near_high_school_required_someone_help_to_guide_the_caretaker_to_register_into_the_app_thank_you_3"><![CDATA[Rumah Kasih Syahirah required your help peeps.. Do donate on the neccssary item from the apps. There is one more new orphanage near high school, required someone help to guide the caretaker to register into the app. Thank you <3]]></string>
    <string name="donation_items">Donation items:</string>
    <string name="view_updates">View Updates</string>
    <string name="sign_out">Sign Out</string>
    <string name="_15">15</string>
    <string name="number_of_items_will_be_donated">Number of items will be donated</string>
    <string name="no_product_available_please_add_new_product">No product available. \nPlease add new product.</string>
    <string name="current_stock_">Current Stock</string>
    <string name="minimum_stock_">Minimum Stock</string>
    <string name="no_history_donation_data_yet_please_make_some_donation">No history donation data yet. \nPlease make some donation.</string>
</resources>