<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/donation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/donator_s_details"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curve_grey_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donation_title"/>
    <TextView
        android:id="@+id/title_donor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1"/>
    <TextView
        android:id="@+id/title_donor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_email"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_name"/>
    <TextView
        android:id="@+id/title_donor_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_phone_number"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_email"/>
    <TextView
        android:id="@+id/title_donor_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation_amount"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_contact"/>
    <TextView
        android:id="@+id/title_donor_from_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/from_account"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_amount"/>
    <TextView
        android:id="@+id/title_donor_to_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_account"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_from_acc"/>
    <TextView
        android:id="@+id/title_effective_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipient_s_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_donor_to_acc"/>
    <TextView
        android:id="@+id/title_tac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tac"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/title_effective_date"/>
    <TextView
        android:id="@+id/btn_request_tac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:padding="6dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:background="@drawable/curve_white_bg"
        android:text="@string/request_tac"
        app:layout_constraintTop_toBottomOf="@id/title_effective_date"
        app:layout_constraintStart_toEndOf="@id/title_tac"/>
    <TextView
        android:id="@+id/donor_name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        tool:text="@string/nur_syahirah_binti_abdul_rahman"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1"/>
    <TextView
        android:id="@+id/donor_email_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        tool:text="@string/syahirah_gmail_com"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/donor_name_val"/>
    <TextView
        android:id="@+id/donor_contact_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        tool:text="@string/_60123456789"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/donor_email_val"/>
    <TextView
        android:id="@+id/donor_amount_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        tool:text="@string/rm187_56"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/donor_contact_val"/>
    <TextView
        android:id="@+id/from_acc_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tool:text="@string/_123456789012"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/donor_amount_val"/>
    <TextView
        android:id="@+id/to_acc_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        tool:text="@string/nur_syahirah_binti_abdul_rahman"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/from_acc_val"/>
    <TextView
        android:id="@+id/recepient_name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tool:text="@string/_09765432112"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/to_acc_val"/>
    <EditText
        android:id="@+id/tac_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:hint="@string/xxxxxx"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/recepient_name_val"/>
    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:slider_height="60dp"
        android:layout_gravity="center"
        app:area_margin="4dp"
        app:text_style="bold"
        app:text="SLIDE TO CONFIRM"
        android:layout_margin="15dp"
        app:text_size="17sp"
        app:outer_color="@color/color_17CBEB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>